// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can create 1`] = `
.c0 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: #9F85FF;
  border-color: #9F85FF;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 240px;
}

.c0:focus-visible,
.teleport-button__force-focus-visible .c0 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c0:hover,
.teleport-button__force-hover .c0 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c0:active,
.teleport-button__force-active .c0 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c0:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

<div>
  <a
    href="/web/discover"
    style="text-decoration: none;"
  >
    <button
      class="c0"
      fill="border"
      title=""
      width="240px"
    >
      Add server
    </button>
  </a>
</div>
`;

exports[`cannot create 1`] = `
.c0 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: #9F85FF;
  border-color: #9F85FF;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 240px;
}

.c0:focus-visible,
.teleport-button__force-focus-visible .c0 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c0:hover,
.teleport-button__force-hover .c0 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c0:active,
.teleport-button__force-active .c0 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c0:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

<div>
  <a
    href="/web/discover"
    style="text-decoration: none;"
  >
    <button
      class="c0"
      disabled=""
      fill="border"
      title="You do not have access to add a server"
      width="240px"
    >
      Add server
    </button>
  </a>
</div>
`;

exports[`cannot create when resource starts with vowel 1`] = `
.c0 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: #9F85FF;
  border-color: #9F85FF;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 240px;
}

.c0:focus-visible,
.teleport-button__force-focus-visible .c0 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c0:hover,
.teleport-button__force-hover .c0 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c0:active,
.teleport-button__force-active .c0 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c0:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

<div>
  <a
    href="/web/discover"
    style="text-decoration: none;"
  >
    <button
      class="c0"
      disabled=""
      fill="border"
      title="You do not have access to add an application"
      width="240px"
    >
      Add application
    </button>
  </a>
</div>
`;

exports[`on leaf cluster 1`] = `
.c0 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: #9F85FF;
  border-color: #9F85FF;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 240px;
}

.c0:focus-visible,
.teleport-button__force-focus-visible .c0 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c0:hover,
.teleport-button__force-hover .c0 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c0:active,
.teleport-button__force-active .c0 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c0:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

<div>
  <a
    href="/web/discover"
    style="text-decoration: none;"
  >
    <button
      class="c0"
      disabled=""
      fill="border"
      title="Adding a server to a leaf cluster is not supported"
      width="240px"
    >
      Add server
    </button>
  </a>
</div>
`;

exports[`on leaf cluster when resource starts with vowel 1`] = `
.c0 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: #9F85FF;
  border-color: #9F85FF;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 240px;
}

.c0:focus-visible,
.teleport-button__force-focus-visible .c0 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c0:hover,
.teleport-button__force-hover .c0 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.20), 0px 5px 8px 0px rgba(0,0,0,0.14), 0px 1px 14px 0px rgba(0,0,0,0.12);
}

.c0:active,
.teleport-button__force-active .c0 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c0:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255,255,255,0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

<div>
  <a
    href="/web/discover"
    style="text-decoration: none;"
  >
    <button
      class="c0"
      disabled=""
      fill="border"
      title="Adding an server to a leaf cluster is not supported"
      width="240px"
    >
      Add server
    </button>
  </a>
</div>
`;
